tests/suite/snapshots/suite__check__tests__check__bad_pa3_4.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_pa3_4.xi:2:14]
   │
 2 │     b:bool = x + 47
   ·     ───┬──   ───┬──  
   ·        ╰───────────── Expected bool because of this
   ·                 │    
   ·                 ╰──── Expected bool but found int
───╯

